# oop_exercise_08

./: CMakeLists.txt  main.cpp  report.docx  task.txt
Figure/: Figure.cpp  Figure.hpp  Figure.tpp
Figure/Octahedron/: Octahedron.cpp  Octahedron.h  Octahedron.tpp
Figure/Square/: Square.cpp  Square.h  Square.tpp
Figure/Triangle/: Triangle.cpp  Triangle.h  Triangle.tpp
Read_input/: Read_input.cpp  Read_input.hpp  Read_input.tpp
tests/: test_0  test_01.txt  test_02.txt  test_draw  test_print
